--- a/style.css
+++ b/style.css
@@ -2,7 +2,49 @@
   box-sizing: border-box;
 }
 
+html {
+  background-image: url("BeerOnTheWall.jpg")
+}
+
 body {
-  font-family: 'Courier New', Courier, monospace;
+  font-family: monospace, fantasy, arial;
   text-align: center;
+}
+
+.container-2 div{
+  border: 5px rgb(139, 137, 137) solid;
+  padding: 10px;
+  width: 40% ;
+  justify-content: center;
+  align-self: center;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 5px;
+  background: cornsilk;
+  text-align: center;
+}
+
+input[type=submit] {
+  background-color: rgb(245, 243, 243);
+  border-radius: 5px;
+}
+
+.box-2{
+  flex:1;
+}
+
+.box-3{
+  flex:1;
+}
+
+.container-1 div {
+  border: 5px rgb(139, 137, 137) solid;
+  padding: 10px;
+  width: 40% ;
+  justify-content: center;
+  align-self: center;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 5px;
+  background: cornsilk;
 }
