--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
 .container-2 div{
   border: 5px rgb(139, 137, 137) solid;
   padding: 10px;
-  width: 40% ;
+  width: 80% ;
   justify-content: center;
   align-self: center;
   margin-left: auto;
@@ -40,11 +40,29 @@ input[type=submit] {
 .container-1 div {
   border: 5px rgb(139, 137, 137) solid;
   padding: 10px;
-  width: 40% ;
+  width: 80% ;
   justify-content: center;
   align-self: center;
   margin-left: auto;
   margin-right: auto;
   border-radius: 5px;
   background: cornsilk;
+}
+
+ul {
+  padding-left: 0;
+}
+
+img {
+  max-width: 100%;
+}
+
+@media screen and (min-width: 800px) {
+  .conatiner-1 div {
+    width: 40%;
+  }
+
+  .container-2 div {
+    width: 40%;
+  }
 }
